; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_msrledec.c_ff_msrle_decode.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_msrledec.c_ff_msrle_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Unknown depth %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_msrle_decode(i32* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load i32, i32* %8, align 4
  switch i32 %10, label %22 [
    i32 4, label %11
    i32 8, label %16
    i32 16, label %16
    i32 24, label %16
    i32 32, label %16
  ]

11:                                               ; preds = %4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = call i32 @msrle_decode_pal4(i32* %12, i32* %13, i32* %14)
  store i32 %15, i32* %5, align 4
  br label %27

16:                                               ; preds = %4, %4, %4, %4
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @msrle_decode_8_16_24_32(i32* %17, i32* %18, i32 %19, i32* %20)
  store i32 %21, i32* %5, align 4
  br label %27

22:                                               ; preds = %4
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @AV_LOG_ERROR, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @av_log(i32* %23, i32 %24, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %25)
  store i32 -1, i32* %5, align 4
  br label %27

27:                                               ; preds = %22, %16, %11
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @msrle_decode_pal4(i32*, i32*, i32*) #1

declare dso_local i32 @msrle_decode_8_16_24_32(i32*, i32*, i32, i32*) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
